[package]
name = "synchronice"
version = "0.1.0"
authors = ["Mohammed Ismail Ansari <team.terminal@gmail.com>"]
edition = "2018"
description = "A text-based frontend for Syncthing"
readme = "README.md"
repository = "https://github.com/myTerminal/synchronice"
documentation = "https://docs.rs/synchronice"
homepage = "https://github.com/myTerminal/synchronice"
license = "MIT"
keywords = ["syncthing"]
categories = ["interface"]

[dependencies]
clap = "2.33.1"
ansi_term = "0.12.1"
cursive = "0.16.3"